# SocialTech-Gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: costmap_common_params.yaml  exploration.yaml  joint_names_tracer2.yaml  puntos.csv  puntosObstaculos.csv
img/: rutamovil.gif:Zone.Identifier  rutamovil.gifZone.Identifier
launch/: amcl_demo.launch  display.launch  gazebo.launch  gazeboXacro.launch  gazebo_obstaculo_fijo.launch  gazebo_obstaculo_movil.launch  prueba.launch  prueba1.launch  prueba1.launch.py  prueba2.launch
models/C0/: model.sdf
models/C1/: model.sdf
models/C10/: model.sdf
models/C11/: model.sdf
models/C12/: model.sdf
models/C13/: model.sdf
models/C14/: model.sdf
models/C15/: model.sdf
models/C16/: model.sdf
models/C17/: model.sdf
models/C18/: model.sdf
models/C2/: model.sdf
models/C3/: model.sdf
models/C4/: model.sdf
models/C5/: model.sdf
models/C6/: model.sdf
models/C7/: model.sdf
models/C8/: model.sdf
models/C9/: model.sdf
models/QR0/: model.sdf
models/QR0/materials/textures/: 0.png:Zone.Identifier
models/QR1/: model.sdf
models/QR10/: model.sdf
models/QR11/: model.sdf
models/QR11/materials/textures/: 11.png:Zone.Identifier
models/QR12/: model.sdf
models/QR12/materials/textures/: 12.png:Zone.Identifier
models/QR13/: model.sdf
models/QR13/materials/textures/: 13.png:Zone.Identifier
models/QR14/: model.sdf
models/QR14/materials/textures/: 14.png:Zone.Identifier
models/QR15/: model.sdf
models/QR15/materials/textures/: 15.png:Zone.Identifier
models/QR16/: model.sdf
models/QR16/materials/textures/: 16.png:Zone.Identifier
models/QR17/: model.sdf
models/QR17/materials/textures/: 17.png:Zone.Identifier
models/QR18/: model.sdf
models/QR18/materials/textures/: 18.png:Zone.Identifier
models/QR2/: model.sdf
models/QR3/: model.sdf
models/QR4/: model.sdf
models/QR5/: model.sdf
models/QR6/: model.sdf
models/QR6/materials/textures/: 6.png:Zone.Identifier
models/QR7/: model.sdf
models/QR8/: model.sdf
models/QR9/: model.sdf
rviz/: model_display.rviz
scripts/: moverObstaculo.py  ponerObstaculoFijo.py
urdf/: camera.xacro  obstaculo_fijo.urdf  obstaculo_movil.urdf  tracer2.csv  tracer2.gazebo  tracer2.gazebo:Zone.Identifier  tracer2.urdf
worlds/: ICAI_A501.world  plano1.world
