<package format="2">
  <name>SocialTech-Gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for SocialTech-Gazebo</p>
    <p>This package contains configuration data, 3D models and launch files
for SocialTech-Gazebo robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <export>
    <architecture_independent />
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/fuel_models"/>
  </export>
</package>
