<package format="2">
  <name>SocialTech-Gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for SocialTech-Gazebo</p>
    <p>This package contains configuration data, 3D models and launch files
for SocialTech-Gazebo robot</p>
  </description>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <!-- <depend>joint_state_publisher_gui</depend> -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent />
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models:${prefix}/fuel_models"/>
  </export>
</package>
